src/objects/CI_OpportunityTypeExclude__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <label>Instance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Type Exclude</label>
</CustomObject>